--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ timezone: Asia/Taipei # Timezone for blog posts and alike
 # 5. Collections
 collections:
   posts:
-    # title: Blog # Needed for Siteleaf
+    title: Blog # Needed for Siteleaf
     output: true
     # description: "This is merely a demo, find out more [about Garth](about)" # The post list page content
 
